samples/_failures_safe/1761469514_ed127e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e56a6aec.c: In function ‘tokenize’:
./samples/SAFE/__tmp_e56a6aec.c:155:13: error: expected expression at end of input
  155 |             if (
      |             ^~
./samples/SAFE/__tmp_e56a6aec.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e56a6aec.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e56a6aec.c:155:13: error: expected declaration or statement at end of input
